--- a/selenium_1/build.gradle
+++ b/selenium_1/build.gradle
@@ -16,5 +16,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.5.0'
+    implementation 'io.cucumber:cucumber-java8:7.11.1'
+    implementation 'io.cucumber:cucumber-junit:7.11.1'
+
 }
 
+test {
+    useJUnitPlatform()
+}
